examples/test/testpolicy6186.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6186
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key8: value12
      key37: value32
      key47: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value36
          key30: value29
      podSelector:
        matchLabels:
          key4: value5
          key3: value30
